--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+html,
+body {
+  background-color: rgb(245, 245, 245);
+}
+
 .container {
   margin: 80px auto 0 auto;
   max-width: 1200px;
@@ -5,4 +10,8 @@
 
 .nav-container {
   margin: auto;
+}
+
+a {
+  text-decoration: none;
 }
